<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    android:backgroundTint="@android:color/darker_gray"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/blank"
        android:layout_width="412dp"
        android:layout_height="112dp"
        android:background="#BEFBFBFB"

        android:gravity="right|center_horizontal|center_vertical"

        android:hint="@string/hint"
        android:inputType="number"
        android:textColor="#0C0C0C"
        android:textColorHint="#0C0C0C"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="407dp"
        android:layout_height="369dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blank"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonMod"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/mode"
                android:onClick="btnMod"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/negative"
                android:onClick="btnNega"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"

                android:text="@string/clear"
                android:onClick="btnCE"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#F57C00" />

            <ImageButton
                android:id="@+id/buttonDel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btnDel"
                android:background="@drawable/circle"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#588C2A"
                app:srcCompat="@drawable/backspace" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="179dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn7"
                android:background="@drawable/circle"
                android:text="@string/seven"
                android:textColor="#303F9F"
                android:textColorHighlight="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn8"
                android:background="@drawable/circle"
                android:text="@string/eight"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn9"
                android:background="@drawable/circle"
                android:text="@string/nine"
                android:textAllCaps="false"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btnMul"
                android:background="@drawable/circle"
                android:text="@string/multiply"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn4"
                android:background="@drawable/circle"
                android:text="@string/four"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn5"
                android:background="@drawable/circle"
                android:text="@string/five"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn6"
                android:background="@drawable/circle"
                android:text="@string/six"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btnSub"
                android:background="@drawable/circle"
                android:text="@string/subtract"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn1"
                android:background="@drawable/circle"
                android:text="@string/one"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn2"
                android:background="@drawable/circle"
                android:text="@string/two"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn3"
                android:background="@drawable/circle"
                android:text="@string/three"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btnPlus"
                android:background="@drawable/circle"
                android:text="@string/plus"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="60dp"
            android:layout_height="60dp">

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btnDot"
                android:background="@drawable/circle"
                android:text="@string/dot"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btn0"
                android:background="@drawable/circle"
                android:text="@string/zero"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btnDivide"
                android:background="@drawable/circle"
                android:text="@string/divide"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="btnEqual"
                android:background="@drawable/circle"
                app:srcCompat="@drawable/backspace"
                android:text="@string/equal"
                android:textColor="#303F9F"
                android:textSize="30sp"
                app:backgroundTint="#9AA4E3" />
        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>